--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,10 +18,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.1",
+    "dotenv": "^16.4.5",
     "jodit-react": "^4.1.2",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
